<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <cc.shencai.commonlibrary.widgets.ForbidSlideViewPager
        android:id="@+id/main_tabpager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" >
    </cc.shencai.commonlibrary.widgets.ForbidSlideViewPager>
    <View
        android:id="@+id/my_page_message_divider"
        style="@style/item_divider"
        />

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:id="@+id/rlTab1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivIcon1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/fg1_press"
                />

            <TextView
                android:id="@+id/tvText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivIcon1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/main_tab1"
                android:textColor="@color/main_tab_text_blue"
                android:textSize="11sp"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlTab2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivIcon2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/fg2_normal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tvText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivIcon2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/main_tab2"
                android:textColor="@color/global_text_gray"
                android:textSize="11sp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlTab3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivIcon3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/fg3_normal"
                />

            <TextView
                android:id="@+id/tvText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivIcon3"
                android:layout_centerHorizontal="true"
                android:textColor="@color/global_text_gray"
                android:layout_marginTop="3dp"
                android:text="@string/main_tab3"
                android:textSize="11sp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlTab4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivIcon4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/fg4_normal"

                />

            <TextView
                android:id="@+id/tvText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivIcon4"
                android:textColor="@color/global_text_gray"
                android:layout_marginTop="3dp"
                android:layout_centerHorizontal="true"
                android:text="@string/main_tab4"
                android:textSize="11sp"
                />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
